tests/NormalTests/paczka1/fuzzy1/24350145.err
Error in line 2: 10Wa S363 56,4
Error in line 23: S909 S909 9,0
